--- a/capstone/src/Styles/MealPlan/WeekView.css
+++ b/capstone/src/Styles/MealPlan/WeekView.css
@@ -19,7 +19,7 @@
 }
 .week-scroll-container {
     overflow-y: auto; 
-    max-height: 500px; 
+    max-height: 450px; 
     padding-right: 10px;
     display: flex;
 }
